scrollbar fix

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,6 +1,8 @@
+
 body{
-    
+    overflow-x:hidden;
     /* background-image: url("./images/background.jpg"); */
+    width: 100vw;
     background-color:#000000e6;
     background-size:initial;
     background-repeat: no-repeat;
@@ -11,19 +13,20 @@ body{
     /* :#333e4f; */
 }
 .container{
-    width: 80%;
-    margin-left: 10%;
-    margin-right:10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    /* margin-left: 10vw;
+    margin-right:10vw; */
     
-}
-.content1{
-    height:100vh;
 }
 .navbar{
     /* background-color: #383131; */
     width: 70%;
-    margin-left: 15%;
-    margin-right:15%;
+    /* margin-left: 15%;
+    margin-right:15%; */
     margin-top:4vh;
     position:relative;
 
@@ -87,11 +90,17 @@ body{
 
 
 .main_section{
-    margin-left: 30%;
-    margin-right:30%;
+    /* margin-left: 30%;
+    margin-right:30%; */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     margin-top:20vh;
+    margin-bottom: 15vh;
     width:40%;
-    height: 50vh;
     text-align: center;
 }
 .main_section >h1{
@@ -133,14 +142,11 @@ a{
 }
 .icons{
     font-size:2rem;
-    margin:5% 30% 0 30%; 
     width: 40%;
     display: flex;
     justify-content: space-evenly;
 }
 .footer{
-    margin-left: 40%;
-    margin-right:40%;
     width:20%;
     display: flex;
     flex-direction: row;
@@ -203,7 +209,6 @@ a{
 }
 
 .page_title{
-    margin-left:0 20% 0 20%;
     text-align: center;
     font-size: x-large;
     color: #474747;
@@ -214,10 +219,10 @@ a{
     display: flex;
     flex-flow:row wrap;
     justify-content: space-between;
-
+    width:70%;
     margin-bottom: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
+    /* margin-left: 20%;
+    margin-right: 20%; */
 
 }
 .project_card{
@@ -226,7 +231,7 @@ a{
     flex-direction: column;
     justify-content: space-between;
 
-    width: 100% !important;
+    width: 400px !important;
     height:auto;
     border-radius: 5%;
     /* padding:5px;
@@ -290,38 +295,28 @@ a{
 }
 
 
-
-
 @media only screen and (max-width: 600px) {
-    .container{
-        align-items: center;
-    }
+
     .navbar{
-        width: 100%;
-        margin:5vh 5% 0% 5%;
+    width: 80%;
 
     font-size: 25px;
     font-style: bold;
-
-
     }
+
     .main_section{
-        margin:15vh 0% 0% 0%;
+        margin:5vh 0% 10vh 0%;
         width: 100%;
         height: 50vh;
         align-content: center;
     }
     .footer{
-        margin-left: 20%;
-        margin-right:20%;
         width:60%;
     }
     .project_section{
         display: flex;
         flex-flow:column wrap;
         justify-content: space-between;
-
-        margin: 0 0 0 0;
 
         align-items: center;
     
